# src/controllers/order.controller.ts
@@ -91,7 +91,48 @@ export default {
             response.error(res, error, "failed to find one order");
         }
     },
-    async findAllByMember (req: IReqUser, res: Response) {},
+    async findAllByMember (req: IReqUser, res: Response) {
+        try {
+        const userId = req.user?.id;
+        const buildQuery = (filter: any) => {
+            let query: FilterQuery<TypeOrder> = {
+            createdBy: userId,
+            };
+
+            if (filter.search) query.$text = { $search: filter.search };
+
+            return query;
+        };
+
+        const { limit = 10, page = 1, search } = req.query;
+
+        const query = buildQuery({
+            search,
+        });
+
+        const result = await OrderModel.find(query)
+            .limit(+limit)
+            .skip((+page - 1) * +limit)
+            .sort({ createdAt: -1 })
+            .lean()
+            .exec();
+
+        const count = await OrderModel.countDocuments(query);
+
+        response.pagination(
+            res,
+            result,
+            {
+            current: +page,
+            total: count,
+            totalPages: Math.ceil(count / +limit),
+            },
+            "success find all orders"
+        );
+        } catch (error) {
+        response.error(res, error, "failed find all orders");
+        }
+    },
 
     async complete (req: IReqUser, res: Response) {
         try {
@@ -150,16 +191,84 @@ export default {
     },
     async pending (req: IReqUser, res: Response) {
         try {
+            const { orderId } = req.params;
 
+            const order = await OrderModel.findOne({
+                orderId,
+            });
+
+            if(!order) return response.notFound(res, "order not found");
+
+            if(order.status === OrderStatus.COMPLETED) {
+                return response.error(res, null, "this order has been completed");
+            }
+
+            if(order.status === OrderStatus.PENDING) {
+                return response.error(res, null, "this order currently in payment pending");
+            }
+
+            const result = await OrderModel.findOneAndUpdate({orderId}, 
+            {
+                status: OrderStatus.PENDING,
+            },
+            {
+                new: true,
+            }
+            );
+
+            response.success(res, result, "success to pending an order");
         } catch(error) {
             response.error(res, error, "failed to pending an order");
         }
     },
     async cancelled (req: IReqUser, res: Response) {
         try {
+            const { orderId } = req.params;
 
+            const order = await OrderModel.findOne({
+                orderId,
+            });
+
+            if(!order) return response.notFound(res, "order not found");
+
+            if(order.status === OrderStatus.COMPLETED) {
+                return response.error(res, null, "this order has been completed");
+            }
+
+            if(order.status === OrderStatus.CANCELLED) {
+                return response.error(res, null, "this order currently in payment cancelled");
+            }
+
+            const result = await OrderModel.findOneAndUpdate({orderId}, 
+            {
+                status: OrderStatus.CANCELLED,
+            },
+            {
+                new: true,
+            }
+            );
+
+            response.success(res, result, "success to cancelled an order");
         } catch(error) {
             response.error(res, error, "failed to cancelled an order");
+        }
+    },
+    async remove(req: IReqUser, res: Response) {
+        try {
+            const { orderId } = req.params;
+            const result = await OrderModel.findOneAndDelete({
+                orderId,
+            }, {
+                new: true,
+            });
+
+            if(!result) {
+                return response.notFound(res, "order not found");
+            }
+
+            response.success(res, result, "success to remove an order");
+        } catch (error) {
+            response.error(res, error, "failed to remove an order")
         }
     },
 };
